--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/forms": "^0.5.10",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^0.26.1",
     "date-fns": "^2.30.0",
-    "firebase": "^9.6.7",
-    "mongodb": "^6.16.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^17.0.2",
@@ -23,10 +18,7 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "react-toastify": "^8.2.0",
-    "react-transition-group": "^4.4.5",
-    "socket.io-client": "^4.8.1",
-    "web-vitals": "^2.1.4",
-    "zustand": "^3.7.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
