--- a/server/package.json
+++ b/server/package.json
@@ -12,21 +12,23 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-rate-limit": "^6.7.0",
-    "express-validator": "^6.15.0",
-    "helmet": "^6.1.5",
-    "jsonwebtoken": "^8.5.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.4.1",
+    "express-validator": "^7.2.0",
+    "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
-    "mongoose": "^6.0.5",
+    "mongoose": "^8.9.3",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.6.3",
-    "socket.io": "^4.2.0"
+    "nodemailer": "^6.9.16",
+    "socket.io": "^4.8.1",
+    "xss": "^1.0.15",
+    "express-slow-down": "^2.0.3"
   },
   "devDependencies": {
-    "jest": "^27.1.0",
-    "nodemon": "^2.0.12",
-    "supertest": "^6.1.6"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0"
   }
 }
