--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:no-lint": "ESLINT_NO_DEV_ERRORS=true GENERATE_SOURCEMAP=false react-scripts build",
     "build:optimized": "node build-optimized.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
