--- a/client/package.json
+++ b/client/package.json
@@ -7,16 +7,16 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@tailwindcss/forms": "^0.5.10",
     "aos": "^2.3.4",
-    "axios": "^0.26.1",
+    "axios": "^1.10.0",
     "date-fns": "^2.30.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -24,7 +24,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm cache clean --force && react-scripts start",
     "build": "react-scripts build",
     "build:no-lint": "ESLINT_NO_DEV_ERRORS=true GENERATE_SOURCEMAP=false react-scripts build",
     "build:optimized": "node build-optimized.js",
@@ -51,7 +51,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000",
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "imagemin": "^8.0.1",
