--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.4.0",
+    "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.1",
+    "mongoose": "^8.18.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.4",
