refactor: Prepare project for portfolio deployment
Major improvements for production readiness and security:

Security Enhancements:
- Implement bcrypt password hashing in User model
- Add comparePassword method for secure authentication
- Remove hardcoded credentials and sensitive information
- Add proper password validation in auth routes
- Sanitize environment configuration files

Code Quality:
- Fix missing express-validator error handling
- Add proper error logging throughout controllers
- Fix memory leak in reservation auto-complete interval
- Remove production console.log statements
- Add cleanup function for interval management

Configuration:
- Create .env.example files for both client and server
- Update .gitignore to exclude .claude directory
- Remove hardcoded URLs from API service
- Generalize ecosystem.config.js for PM2

Documentation:
- Add comprehensive README.md for portfolio presentation
- Create CLAUDE.md with technical architecture details
- Add MIT License
- Remove internal deployment documentation

Cleanup:
- Remove server-specific deployment scripts
- Delete test and utility scripts
- Remove internal documentation files
- Clean up duplicate and unused files

This version is production-ready and suitable for portfolio presentation.

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,14 @@ dist/
 .env.development.local
 .env.test.local
 .env.production.local
-*.env*
+.env.production
+server/.env
+server/.env.local
+server/.env.production
 server/.env.save
+!.env.example
+!server/.env.example
+!server/env.production.example
 
 # Logs
 npm-debug.log*
@@ -84,6 +90,7 @@ Thumbs.db
 # IDE files
 .vscode/
 .idea/
+.claude/
 *.swp
 *.swo
 *~
