--- a/server/env.production.example
+++ b/server/env.production.example
@@ -1,25 +1,25 @@
 NODE_ENV=production
 PORT=5000
-MONGODB_URI=mongodb://elnopal_user:ElNopal_DB_2024_SuperSeguro!@localhost:27017/elnopal
-JWT_SECRET=ElNopal_JWT_SuperSecreto_2024_ProduccionSegura_CambiarEsteValor!
-CORS_ORIGIN=http://elnopal.es
+MONGODB_URI=mongodb://localhost:27017/restaurant_db
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+CORS_ORIGIN=http://localhost:3000
 
-# Configuración de correo Gmail
+# Email Configuration (Gmail)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_SECURE=false
-EMAIL_USER=reservas@elnopal.es
-EMAIL_PASS=tu-app-password-de-gmail-aqui
-EMAIL_FROM="El Nopal Restaurant <reservas@elnopal.es>"
+EMAIL_USER=your-email@example.com
+EMAIL_PASS=your-app-password-here
+EMAIL_FROM="Restaurant Name <your-email@example.com>"
 
-# Configuración adicional
-ADMIN_EMAIL=reservas@elnopal.es
-RESTAURANT_NAME="El Nopal Restaurant"
-RESTAURANT_PHONE="+34 XXX XXX XXX"
-RESTAURANT_ADDRESS="Tu dirección del restaurante"
+# Additional Configuration
+ADMIN_EMAIL=admin@example.com
+RESTAURANT_NAME="Restaurant Name"
+RESTAURANT_PHONE="+1 XXX XXX XXXX"
+RESTAURANT_ADDRESS="Your restaurant address"
 
-# Configuración de seguridad adicional
-SESSION_SECRET=ElNopal_Session_SuperSecreto_2024_CambiarEsteValor!
+# Security Configuration
+SESSION_SECRET=your-session-secret-change-this-in-production
 BCRYPT_ROUNDS=12
 MAX_LOGIN_ATTEMPTS=5
 LOCK_TIME=30 
